--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,21 +1,24 @@
 .menu{
-    padding: 0;
-    margin: 0;
+    height: 100vh;
+    width: 230px;
+    padding: 10px 10px 0 10px;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
 }
 
 .ul{
-  height: auto;
-  padding: 0;
-  width: 100%;
 
 }
 
 .li{
     width: 100%;
-    height: 50px;
+    height: 70px;
+    padding: 10px 0 0 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 15px;
 
     top: 0;
     position: relative;
@@ -34,15 +37,14 @@
 
 .a{
     font-weight: 600;
-    flex: 70%;
-
+    flex: 60%;
+    line-height: 60px;
 }
 
 .icon{
-    /* padding-top: 20px;
-    padding-bottom: 0;
-    text-align: center; */
     flex: 30%;
-    /* place-items: center;
-    text-align: center; */
+    padding: 10px 10px 0 0;
+    margin: 0 20px -5px 0;
+    width: 40px;
+    height: 40px;
 }
