--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,8 +18,8 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb)); */
-  
+    rgb(var(--background-start-rgb));
+   */
 
 }
 
