--- a/src/components/form-mail/Form.module.css
+++ b/src/components/form-mail/Form.module.css
@@ -4,6 +4,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
+
+}
+
+.formsub{
+    background-color: rgb(219, 219, 219);
+    width: 40%;
+    padding: 30px;
+    border-radius: 40px;
+    border: 2px solid rgb(185, 185, 185);
+    box-shadow: 30px 43px 32px -34px #333;
+}
+
+@media screen and (max-width: 767px){
+    .formsub{
+        width: 100vw;
+    }
 
 }
 
@@ -13,21 +30,13 @@
     transform: translateY(-10px);
 }
 
-.formsub{
-    background-color: rgb(219, 219, 219);
-    padding: 30px;
-    border-radius: 40px;
-    border: 2px solid rgb(185, 185, 185);
-    box-shadow: 30px 43px 32px -34px #333;
-}
-
 .uiForm{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin: 30px 200px 10px 0px;
+    margin: 30px 0px 20px 0px;
     height: 500px;
 }
 
@@ -91,4 +100,9 @@
     color: red;
     margin: 0;
     align-self: flex-start;
+}
+
+
+@media screen and (max-width: 767px){
+
 }
