--- a/src/components/accordion/Accordion.module.css
+++ b/src/components/accordion/Accordion.module.css
@@ -2,14 +2,13 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     justify-content: center;
     align-items: center;
     background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
     /* background-color: rgba(238, 196, 134, 0.479); */
     padding-top: 100px;
-    overflow: hidden;
 
 }
 
@@ -57,9 +56,9 @@
     background-color: rgba(255, 255, 255, 0.678);
     margin-bottom: 10px;
     padding: 0px 0px 0px 10px;
-    height: 0;
+    /* height: 0;
     visibility: hidden;
-    opacity: 0;
+    opacity: 0; */
 
 }
 
