--- a/src/components/accordion/Accordion.module.css
+++ b/src/components/accordion/Accordion.module.css
@@ -1,5 +1,4 @@
 .faqParents{
-    margin: 0;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -7,9 +6,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
-    /* background-color: rgba(238, 196, 134, 0.479); */
     padding-top: 100px;
-
 }
 
 @media screen and (max-width:767px){
@@ -33,6 +30,8 @@
 }
 
 .grandchild{
+    user-select: none;
+
 }
 
 .questionParents{
@@ -56,20 +55,32 @@
     background-color: rgba(255, 255, 255, 0.678);
     margin-bottom: 10px;
     padding: 0px 0px 0px 10px;
-    /* height: 0;
-    visibility: hidden;
-    opacity: 0; */
+
+}
+
+.answerParents2{
+    display: block;
+    background-color: rgba(255, 255, 255, 0.678);
+    margin-bottom: 10px;
+    padding: 0px 0px 0px 10px;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
 
 }
 
 .answer{
     padding: 10px;
-    
 }
 
 .span{
     font-size: 30px;
     padding-right: 10px;
     color: rgb(238, 196, 134);
+}
+
+.span2{
+    transition: 0.2s;
+    rotate: 45deg;
 }
 
