--- a/src/components/form-mail/Form.module.css
+++ b/src/components/form-mail/Form.module.css
@@ -32,12 +32,12 @@
 
 .uiForm{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin: 30px 0px 20px 0px;
-    height: 500px;
 }
 
 .formFied{
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
 }
 
 .label{
