--- a/src/components/sidebar/hamburger-menu/HamburgerData.module.css
+++ b/src/components/sidebar/hamburger-menu/HamburgerData.module.css
@@ -1,11 +1,14 @@
 .menu{
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 230px;
     padding: 80px 10px 0px 0px;
     background-color: rgb(255, 208, 106);
     transform: translateX(-100%);
     transition: all 0.35s;
+    position: fixed;
 }
 
 .menu1{
@@ -65,7 +68,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.178);
+    background-color: rgba(0, 0, 0, 0.205);
     display: none;
 }
 
