--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -21,10 +21,17 @@
 
 }
 
+/* .icon{
+  position: absolute;
+  left: 10px;
+  bottom: 94px;
+} */
+
 .h1{
   font-size: 3rem;
   color: white;
   padding: 80px;
+  position: relative;
 }
 
 .image{
