--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -21,12 +21,6 @@
 
 }
 
-/* .icon{
-  position: absolute;
-  left: 10px;
-  bottom: 94px;
-} */
-
 .h1{
   font-size: 3rem;
   color: white;
@@ -58,14 +52,6 @@
   backdrop-filter: blur(5px);
 
 }
-
-/* .h2{
-
-}
-
-.p{
-} */
-
 
 /**********************************************************/
 
@@ -107,22 +93,53 @@
   margin-bottom: 100px;
 }
 
+.content3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.h1_3{
+  font-size: 3rem;
+  color: white;
+  padding: 80px;
+
+}
+
+.demo{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.innner_content{
+  display: block;
+  margin: 50px;
+}
+
 .image3{
   display: block;
-  position: relative;
-  right: -220px;
-  top: -10px;
-  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
 .textTile3{
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 20%;
-  z-index: 10;
-  padding: 15px;
-  transform: translate(-300px,80px);
 }
+
+.h2_3{
+  font-size: 25px;
+}
+
+.p3{
+  width: 200px;
+
+}
+
