--- a/src/components/information/Information.module.css
+++ b/src/components/information/Information.module.css
@@ -1,23 +1,24 @@
 .parents{
     background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     display: grid;
     justify-content: center;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     overflow-y: auto;
-    
-    
 }
 
 .master{
-    display: block;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(200px);
 }
 
 .children{
-
+    display: block;
 }
 
 .children:nth-child(1){
@@ -68,11 +69,13 @@
 .image{
     display: block;
     margin: 10px;
+    cursor: pointer;
 }
 
 
 .contents{
     margin-left: 15px;
+    padding: 10px;
 }
 
 .h2{
