--- a/src/components/form-mail/Form.module.css
+++ b/src/components/form-mail/Form.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
+    /* background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479)); */
 
 }
 
