--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,8 +28,8 @@ body {
 
 
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
