--- a/src/components/information/Information.module.css
+++ b/src/components/information/Information.module.css
@@ -1,5 +1,5 @@
 .parents{
-    background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
+    /* background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479)); */
     height: 100vh;
     width: 100vw;
     display: grid;
@@ -15,6 +15,9 @@
     justify-content: center;
     align-items: center;
     transform: translateY(200px);
+    margin-bottom: 40px;
+
+
 }
 
 .children{
