--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -1,5 +1,5 @@
 .background{
-  background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
+  /* background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479)); */
   /* position: relative; */
   z-index: -10;
   overflow: hidden;
