--- a/src/components/skill/Skill.module.css
+++ b/src/components/skill/Skill.module.css
@@ -1,5 +1,5 @@
 .slider{
-    background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
+    /* background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479)); */
     height: 100vh;
     width: 100%;
     display: flex;
