--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,3 +2,8 @@
     background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
 
 }
+
+.main_css2{
+    background: linear-gradient(to right, rgb(25, 42, 71), rgba(25, 42, 72, 0.274));
+
+}
