--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  
 }
 
 
@@ -13,20 +12,16 @@ body {
 
 }
 
-body {
-  /* color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-   */
-
+body{
+  background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
 }
 
+body::after{
+  background: linear-gradient(to right, rgb(25, 42, 71), rgba(25, 42, 72, 0.274));
+  position: absolute;
+  z-index: 2;
 
-
+}
 
 /* @media (prefers-color-scheme: dark) {
   html {
