--- a/src/components/accordion/Accordion.module.css
+++ b/src/components/accordion/Accordion.module.css
@@ -5,9 +5,8 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479));
     padding-top: 100px;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 @media screen and (max-width:767px){
@@ -19,7 +18,9 @@
 }
 
 .child{
+    display: block;
     width: 700px;
+    margin:5px; 
 
 }
 
@@ -32,7 +33,7 @@
 
 .grandchild{
     user-select: none;
-
+    
 }
 
 .questionParents{
@@ -45,7 +46,7 @@
 
 
 .question{
-    padding: 10px;
+    padding: 15px;
     color: white;
 
 }
@@ -56,6 +57,7 @@
     background-color: rgba(255, 255, 255, 0.678);
     margin-bottom: 10px;
     padding: 0px 0px 0px 10px;
+    user-select: none;
 
 }
 
@@ -66,6 +68,7 @@
     padding: 0px 0px 0px 10px;
     height: 0;
     opacity: 0;
+    pointer-events: none;
 
 }
 
