--- a/src/components/main/MainContent.module.css
+++ b/src/components/main/MainContent.module.css
@@ -58,12 +58,73 @@
   width: 350px;
 }
 
+/**********************************************************************************
+/**********************************************************************************/
+
+@media(max-width:970px){
+  .section1{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .content{
+    height: 100vh;
+  }
+  
+  .h1{
+    color: white;
+    font-size: 35px;
+    top: 60px;
+    padding: 5px;
+  }
+  
+  .image{
+    left: 27%;
+    top: 150px;
+    transform: translate(-20%,-10%);
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+    z-index: -1;
+  }
+  
+  .textTile{
+    position: relative;
+    top: 170px;
+    left: calc(100% - 80%);
+    background:rgba(248, 248, 248, 0.452);
+    backdrop-filter: blur(5px);
+    width: 60%;
+    border-radius: 10px;
+    padding: 10px;
+    z-index: 1;
+    overflow-x: auto;
+  }
+  
+  .h2_1{
+    display: flex;
+    flex-wrap: wrap;
+    
+  }
+  
+  .p_1{
+    display: flex;
+    flex-wrap: wrap;
+    width: 350px;
+  }
+}
+
 /**********************************************************************************/
 
 .section2{
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -119,8 +180,68 @@
   width: 350px;
 }
 
-
-
+/**********************************************************************************
+/**********************************************************************************/
+@media(max-width:970px){
+  .section2{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .content2{
+  
+  }
+  
+  .h1_2{
+    color: white;
+    font-size: 35px;
+    top: -90px;
+    padding: 10px;
+    transform: translateX(250px);
+  }
+  .demo2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .image2{
+    position: relative;
+    left: -30%;
+    top: -10px;
+    transform: translate(55%,-10%);
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+  }
+  
+  .textTile2{
+    position: relative;
+    left: 4%;
+    top: 10px;
+    transform: translateX(100px);
+    background:rgba(248, 248, 248, 0.452);
+    backdrop-filter: blur(5px);
+    width: 370px;
+    border-radius: 10px;
+    padding: 10px;
+  }
+  
+  .h2_2{
+  
+  }
+  
+  
+  .p_2{
+    display: flex;
+    flex-wrap: wrap;
+    width: 350px;
+  }
+}
 
 /**********************************************************************************/
 
@@ -178,4 +299,67 @@
 
 .p3{
   width: 200px;
+}
+
+/**********************************************************************************
+/**********************************************************************************/
+
+@media(max-width:970px){
+  .section3{
+    margin-top: 110px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .content3{
+  
+  }
+  
+  .h1_3{
+    color: white;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding: 10px;
+  }
+  
+  .allFeature{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: 5px;
+  
+  }
+  
+  .innner_content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .image3{
+  
+  }
+  
+  .textTile3{
+    padding: 10px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .h2_3{
+    
+  }
+  
+  .p3{
+    width: 200px;
+  }
 }
