メールフォーム作成

--- a/src/components/form-mail/Form.module.css
+++ b/src/components/form-mail/Form.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     /* background: linear-gradient(to right, rgb(243, 186, 100), rgba(238, 196, 134, 0.479)); */
@@ -15,6 +16,7 @@
     border-radius: 40px;
     border: 2px solid rgb(185, 185, 185);
     box-shadow: 30px 43px 32px -34px #333;
+
 }
 
 @media screen and (max-width: 767px){
@@ -32,7 +34,7 @@
 
 .uiForm{
     width: 100%;
-    height: 100%;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,4 +108,9 @@
 
 @media screen and (max-width: 767px){
 
+}
+
+.formSend{
+    position: relative;
+    top: 90px;
 }
